Add crud for blog and product pages

--- a/GummiBearKingdom/appsettings.json
+++ b/GummiBearKingdom/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "GummiBearKingdomContext": "Server=(localdb)\\mssqllocaldb;Database=GummiBearKingdomContext-ac8f63cc-1bb4-4f89-b8bc-df523585533e;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
